# Celestia

./: CODEX_START_HERE.md
src/: CMakeLists.txt
src/celengine/: CMakeLists.txt  asterism.h  astroobj.h  atmosphere.h  axisarrow.h  body.cpp  body.h  bodylifecycle.h  bodylocationgeometryprojector.h  bodyrenderassets.cpp  bodyrenderassets.h  boundaries.h  category.h  completion.h  console.h  constellation.h  curveplot.h  deepskyobj.cpp  deepskyobj.h  deepskyobjectpicker.h  deepskyobjectrenderpolicy.h  dsodb.h  dsodbbuilder.h  dsooctree.h  dsorenderer.h  fisheyeprojectionmode.h  frame.h  framebuffer.h  frametree.h  galaxy.cpp  galaxy.h  galaxyform.cpp  galaxyform.h  geometry.h  globular.cpp  globular.h  glshader.h  glsupport.h  imageoverlay.h  lightenv.h  (+84 more)
src/celengine/adapter/: bodylifecycle.cpp  bodylifecycle.h  bodylocationgeometryprojector.cpp  bodyrenderassets.cpp  bodyrenderassets.h  deepskyobjectpicker.cpp  deepskyobjectrenderpolicy.cpp  deepskyobjectrenderpolicy.h  dsodbbuilder.cpp  dsodbbuilder.h  nebulalifecycle.cpp  nebulalifecycle.h  nebularenderassetloader.cpp  nebularenderassets.cpp  nebularenderassets.h  sceneviewmodel.cpp  sceneviewmodel.h  selectiongeometryprovider.h  selectionpicker.cpp  selectionpicker.h  solarsys.cpp  solarsys.h  stardbbuilder.cpp  stardbbuilder.h  stardetailslifecycle.cpp  stardetailslifecycle.h  starrenderassets.cpp  starrenderassets.h
src/celengine/controller/: observer.cpp  observer.h  selection.cpp  selection.h  simulation.cpp  simulation.h
src/celengine/legacy/: galaxy.cpp  galaxy.h  galaxyform.cpp  globular.cpp  globular.h  marker.cpp  marker.h  starbrowser.cpp  starbrowser.h
src/celengine/model/: asterism.cpp  atmosphere.cpp  body.cpp  boundaries.cpp  category.cpp  category.h  completion.cpp  completion.h  constellation.cpp  deepskyobj.cpp  deepskyobj.h  dsodb.cpp  dsodb.h  dsooctree.cpp  dsooctree.h  frame.cpp  frame.h  frametree.cpp  frametree.h  location.cpp  name.cpp  name.h  nebula.cpp  nebula.h  octreebuilder.h  opencluster.cpp  opencluster.h  orbitsampler.h  parseobject.cpp  parseobject.h  rotationmanager.cpp  star.cpp  star.h  stardb.cpp  stardb.h  starname.cpp  starname.h  staroctree.cpp  staroctree.h  stellarclass.cpp  (+9 more)
src/celengine/view3d/: axisarrow.cpp  axisarrow.h  console.cpp  curveplot.cpp  dsorenderer.cpp  dsorenderer.h  fisheyeprojectionmode.cpp  fisheyeprojectionmode.h  framebuffer.cpp  framebuffer.h  geometry.cpp  glmarker.cpp  glshader.cpp  glshader.h  glsupport.cpp  imageoverlay.cpp  imageoverlay.h  lodspheremesh.cpp  lodspheremesh.h  meshmanager.cpp  meshmanager.h  modelgeometry.cpp  modelgeometry.h  objectrenderer.h  overlay.cpp  overlay.h  perspectiveprojectionmode.cpp  perspectiveprojectionmode.h  planetgrid.cpp  planetgrid.h  pointstarrenderer.cpp  pointstarrenderer.h  pointstarvertexbuffer.cpp  pointstarvertexbuffer.h  projectionmode.cpp  psfstarvertexbuffer.cpp  psfstarvertexbuffer.h  rendcontext.cpp  rendcontext.h  render.cpp  (+21 more)
src/celephem/: orbit.cpp
src/celestia/: CMakeLists.txt  celestiacore.cpp  celestiacore.h  celestiastate.h  configfile.cpp  configfile.h  eclipsefinder.cpp  favorites.h  ffmpegcapture.cpp  helper.cpp  helper.h  hud.cpp  hud.h  loaddso.cpp  loadsso.cpp  loadsso.h  loadstars.cpp  overlaymanager.h  textinput.cpp  textinput.h  url.cpp  url.h  view.cpp  viewmanager.cpp
src/celestia/qt/: qtappwin.cpp  qtcelestiaactions.cpp  qtcelestiaactions.h  qtcelestialbrowser.cpp  qtdeepskybrowser.cpp  qteventfinder.cpp  qtglwidget.cpp  qtglwidget.h  qtgotoobjectdialog.cpp  qtinfopanel.cpp  qtmarkerutil.cpp  qtpreferencesdialog.cpp  qtselectionpopup.cpp  qtselectionpopup.h  qtsolarsystembrowser.cpp  qttourguide.cpp
src/celestia/sdl/: CMakeLists.txt  aboutdialog.cpp  appwindow.cpp  appwindow.h  gui.cpp  helpers.h  objectsdialog.cpp  renderdialog.cpp  (+3 more)
src/celimage/: dds.cpp
src/celrender/: CMakeLists.txt  asterismrenderer.h  atmosphererenderer.h  boundariesrenderer.h  cometrenderer.h  eclipticlinerenderer.h  galaxyrenderer.h  globularrenderer.h  largestarrenderer.h  legacylargestarrenderer.h  linerenderer.h  nebularenderer.cpp  nebularenderer.h  openclusterrenderer.h  psfglowlargerenderer.h  referencemarkrenderer.h  rendererfwd.h  ringrenderer.cpp  ringrenderer.h  skygridrenderer.h
src/celruntime/: CMakeLists.txt  controllerruntime.cpp  controllerruntime.h  modelruntime.cpp  modelruntime.h  runtimecomposition.cpp  runtimecomposition.h  runtimeconfig.cpp  runtimeconfig.h  viewadapterruntime.cpp  viewadapterruntime.h  viewframe.h  viewframecodec.cpp  viewframecodec.h  viewprovider.h  viewproviderregistry.cpp  viewproviderregistry.h  viewruntime.h
src/celttf/: truetypefont.cpp
test/unit/: CMakeLists.txt  category_test.cpp  constellation_test.cpp  mvc_boundary_test.cpp  mvc_step10_assembly_config_test.cpp  mvc_step10_dataplane_contract_test.cpp  mvc_step10_local_socket_transport_test.cpp  mvc_step10_runtime_assembly_test.cpp  mvc_step10_shared_memory_dataplane_test.cpp  mvc_step10_supervisor_policy_test.cpp  mvc_step10_transport_factory_test.cpp  mvc_step11_compatibility_closure_test.cpp  mvc_step11_runtime_acceptance_test.cpp  mvc_step12_scene_frame_contract_test.cpp  mvc_step12_scene_frame_protocol_test.cpp  mvc_step2_contract_test.cpp  mvc_step3_contract_test.cpp  mvc_step4_directory_contract_test.cpp  mvc_step5_debug2d_view_test.cpp  mvc_step5_forwarding_header_removal_test.cpp  mvc_step5_frontend_contract_test.cpp  mvc_step5_ipc_contract_test.cpp  mvc_step5_process_contract_test.cpp  mvc_step5_process_mode_test.cpp  mvc_step5_runtime_contract_test.cpp  mvc_step5_view_frame_test.cpp  mvc_step5_view_provider_test.cpp  mvc_step6_controller_service_test.cpp  mvc_step6_host_lifecycle_test.cpp  mvc_step6_model_service_test.cpp  mvc_step6_multiprocess_runtime_test.cpp  mvc_step6_protocol_contract_test.cpp  mvc_step6_transport_contract_test.cpp  mvc_step6_view_service_test.cpp  mvc_step7_host_process_test.cpp  mvc_step7_runtime_session_test.cpp  mvc_step7_runtime_stability_test.cpp  mvc_step7_sdl_runtime_test.cpp  mvc_step7_supervisor_resilience_test.cpp  mvc_step8_runtime_session_3d_test.cpp  (+11 more)
(+217 files in other folders)
