set(CELESTIA_MODEL_SOURCES
  model/asterism.cpp
  model/asterism.h
  model/astroobj.h
  model/atmosphere.cpp
  model/atmosphere.h
  model/body.cpp
  model/body.h
  model/boundaries.cpp
  model/boundaries.h
  model/category.cpp
  model/category.h
  model/completion.cpp
  model/completion.h
  model/constellation.cpp
  model/constellation.h
  model/deepskyobj.cpp
  model/deepskyobj.h
  model/dsodb.cpp
  model/dsodb.h
  model/dsooctree.cpp
  model/dsooctree.h
  model/frame.cpp
  model/frame.h
  model/frametree.cpp
  model/frametree.h
  model/location.cpp
  model/location.h
  model/name.cpp
  model/name.h
  model/nebula.cpp
  model/nebula.h
  model/octree.h
  model/octreebuilder.h
  model/opencluster.cpp
  model/opencluster.h
  model/orbitsampler.h
  model/parseobject.cpp
  model/parseobject.h
  model/rotationmanager.cpp
  model/rotationmanager.h
  model/shared.h
  model/star.cpp
  model/star.h
  model/stardb.cpp
  model/stardb.h
  model/starname.cpp
  model/starname.h
  model/staroctree.cpp
  model/staroctree.h
  model/stellarclass.cpp
  model/stellarclass.h
  model/surface.h
  model/timeline.cpp
  model/timeline.h
  model/timelinephase.cpp
  model/timelinephase.h
  model/trajmanager.cpp
  model/trajmanager.h
  model/univcoord.h
  model/universe.cpp
  model/universe.h
  model/urlmanager.cpp
  model/urlmanager.h
)

set(CELESTIA_CONTROLLER_SOURCES
  controller/observer.cpp
  controller/observer.h
  controller/selection.cpp
  controller/selection.h
  controller/simulation.cpp
  controller/simulation.h
)

set(CELESTIA_VIEW_ADAPTER_SOURCES
  adapter/bodylifecycle.cpp
  adapter/bodylifecycle.h
  adapter/bodylocationgeometryprojector.cpp
  adapter/bodylocationgeometryprojector.h
  adapter/bodyrenderassets.cpp
  adapter/bodyrenderassets.h
  adapter/dsodbbuilder.cpp
  adapter/dsodbbuilder.h
  adapter/deepskyobjectpicker.cpp
  adapter/deepskyobjectpicker.h
  adapter/deepskyobjectrenderpolicy.cpp
  adapter/deepskyobjectrenderpolicy.h
  adapter/nebulalifecycle.cpp
  adapter/nebulalifecycle.h
  adapter/nebularenderassetloader.cpp
  adapter/nebularenderassetloader.h
  adapter/nebularenderassets.cpp
  adapter/nebularenderassets.h
  adapter/sceneviewmodel.cpp
  adapter/sceneviewmodel.h
  adapter/selectiongeometryprovider.h
  adapter/selectionpicker.cpp
  adapter/selectionpicker.h
  adapter/solarsys.cpp
  adapter/solarsys.h
  adapter/stardetailslifecycle.cpp
  adapter/stardetailslifecycle.h
  adapter/starrenderassets.cpp
  adapter/starrenderassets.h
  adapter/stardbbuilder.cpp
  adapter/stardbbuilder.h
)

set(CELESTIA_VIEW3D_SOURCES
  view3d/axisarrow.cpp
  view3d/axisarrow.h
  view3d/console.cpp
  view3d/console.h
  view3d/curveplot.cpp
  view3d/curveplot.h
  view3d/dsorenderer.cpp
  view3d/dsorenderer.h
  view3d/fisheyeprojectionmode.cpp
  view3d/fisheyeprojectionmode.h
  view3d/framebuffer.cpp
  view3d/framebuffer.h
  view3d/geometry.cpp
  view3d/geometry.h
  view3d/glmarker.cpp
  view3d/glshader.cpp
  view3d/glshader.h
  view3d/glsupport.cpp
  view3d/glsupport.h
  view3d/imageoverlay.cpp
  view3d/imageoverlay.h
  view3d/lightenv.h
  view3d/lodspheremesh.cpp
  view3d/lodspheremesh.h
  view3d/meshmanager.cpp
  view3d/meshmanager.h
  view3d/modelgeometry.cpp
  view3d/modelgeometry.h
  view3d/objectrenderer.h
  view3d/overlay.cpp
  view3d/overlay.h
  view3d/perspectiveprojectionmode.cpp
  view3d/perspectiveprojectionmode.h
  view3d/planetgrid.cpp
  view3d/planetgrid.h
  view3d/pointstarrenderer.cpp
  view3d/pointstarrenderer.h
  view3d/pointstarvertexbuffer.cpp
  view3d/pointstarvertexbuffer.h
  view3d/projectionmode.cpp
  view3d/projectionmode.h
  view3d/psfstarvertexbuffer.cpp
  view3d/psfstarvertexbuffer.h
  view3d/rectangle.h
  view3d/referencemark.h
  view3d/rendcontext.cpp
  view3d/rendcontext.h
  view3d/render.cpp
  view3d/render.h
  view3d/rendercolors.cpp
  view3d/rendercolors.h
  view3d/renderflags.h
  view3d/renderglsl.cpp
  view3d/renderglsl.h
  view3d/renderinfo.h
  view3d/renderlistentry.h
  view3d/shadermanager.cpp
  view3d/shadermanager.h
  view3d/skygrid.h
  view3d/spheremesh.cpp
  view3d/spheremesh.h
  view3d/starcolors.cpp
  view3d/starcolors.h
  view3d/starpipelineowner.h
  view3d/texmanager.cpp
  view3d/texmanager.h
  view3d/textlayout.cpp
  view3d/textlayout.h
  view3d/texture.cpp
  view3d/texture.h
  view3d/viewporteffect.cpp
  view3d/viewporteffect.h
  view3d/virtualtex.cpp
  view3d/virtualtex.h
  view3d/visibleregion.cpp
  view3d/visibleregion.h
  view3d/warpmesh.cpp
  view3d/warpmesh.h
)

set(CELESTIA_LEGACY_ENGINE_SOURCES
  legacy/galaxy.cpp
  legacy/galaxy.h
  legacy/galaxyform.cpp
  legacy/galaxyform.h
  legacy/globular.cpp
  legacy/globular.h
  legacy/marker.cpp
  legacy/marker.h
  legacy/starbrowser.cpp
  legacy/starbrowser.h
)

if(ENABLE_FFMPEG)
  list(APPEND CELESTIA_VIEW3D_SOURCES
    view3d/videooverlay.cpp
    view3d/videooverlay.h
  )
endif()

set(CELENGINE_SOURCES
  ${CELESTIA_LEGACY_ENGINE_SOURCES}
)

add_library(celestia_model OBJECT ${CELESTIA_MODEL_SOURCES})
add_library(celestia_controller OBJECT ${CELESTIA_CONTROLLER_SOURCES})
add_library(celestia_view_adapter OBJECT ${CELESTIA_VIEW_ADAPTER_SOURCES})
add_library(celestia_view3d OBJECT ${CELESTIA_VIEW3D_SOURCES})
add_library(celengine OBJECT ${CELENGINE_SOURCES})

target_link_libraries(celestia_controller PRIVATE celestia_model)
target_link_libraries(celestia_view_adapter PRIVATE celestia_model celestia_controller)
target_link_libraries(celestia_view3d PRIVATE celestia_model celestia_controller celestia_view_adapter)
target_link_libraries(celengine PRIVATE celestia_model)

gperf_add_table(celestia_model model/location.gperf model/location.cpp 4)
gperf_add_table(celestia_view_adapter adapter/solarsys.gperf adapter/solarsys.cpp 4)
