set(CELRENDER_SOURCES
  view3d/asterismrenderer.cpp
  view3d/asterismrenderer.h
  view3d/atmosphererenderer.cpp
  view3d/atmosphererenderer.h
  view3d/boundariesrenderer.cpp
  view3d/boundariesrenderer.h
  view3d/cometrenderer.cpp
  view3d/cometrenderer.h
  view3d/eclipticlinerenderer.cpp
  view3d/eclipticlinerenderer.h
  view3d/galaxyrenderer.cpp
  view3d/galaxyrenderer.h
  view3d/globularrenderer.cpp
  view3d/globularrenderer.h
  view3d/largestarrenderer.cpp
  view3d/largestarrenderer.h
  view3d/legacylargestarrenderer.cpp
  view3d/legacylargestarrenderer.h
  view3d/psfglowlargerenderer.cpp
  view3d/psfglowlargerenderer.h
  view3d/linerenderer.cpp
  view3d/linerenderer.h
  view3d/nebularenderer.cpp
  view3d/nebularenderer.h
  view3d/openclusterrenderer.cpp
  view3d/openclusterrenderer.h
  view3d/referencemarkrenderer.cpp
  view3d/referencemarkrenderer.h
  view3d/ringrenderer.cpp
  view3d/ringrenderer.h
  view3d/skygridrenderer.cpp
  view3d/skygridrenderer.h
  view3d/gl/binder.cpp
  view3d/gl/binder.h
  view3d/gl/buffer.cpp
  view3d/gl/buffer.h
  view3d/gl/vertexobject.cpp
  view3d/gl/vertexobject.h
)

add_library(celrender OBJECT ${CELRENDER_SOURCES})
